--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,14 @@
 
 /* header */
 header {
-    background-color: orange;
+    background-color: #ff6900;
     /* debug */
-    height: 80px;
+    height: 60px;
+
+    color: white;
 }
 
 header .container-centered {
-    background-color: rgb(226, 147, 0);
-    /* debug */
     height: 100%;
 
     display: flex;
@@ -22,13 +22,17 @@ header .container-centered {
     align-items: center;
 }
 
-header .container-centered > * {
-    background-color: rgb(141, 92, 0);
-    border: 1px dotted black;
-    /* debug */
+header .container-centered a {
+    color: white;
+    text-decoration: none;
+}
 
-    width: 200px;
-    height: 50%;
+header .container-centered #container-logo img {
+    height: 2em;
+}
+
+header .container-centered #function img {
+    height: 1em;
 }
 /* /header */
 
