--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
 header {
     background-color: #ff6900;
     height: 60px;
+    width: 100%;
+
+    position: fixed;
+    z-index: 1;
 
     color: white;
 }
@@ -37,7 +41,8 @@ header .container-centered #function img {
 
 /* main */
 main {
-    padding: 2em;
+    padding-top: 6em;
+    padding-bottom: 2em;
 }
 
 main .container-centered {
