--- a/css/style.css
+++ b/css/style.css
@@ -63,14 +63,13 @@ main .container-centered {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    gap: 10px;
+    gap: 30px;
 }
 
 /* card */
 /* card picture */
 main .container-centered .card {
     width: 30%;
-    height: 500px;
     position: relative;
 }
 
@@ -92,7 +91,7 @@ main .container-centered .card:hover .alternative-img {
 
 main .container-centered .card .on-photo {
     position: absolute;
-    bottom: 100px;
+    top: 75%;
     left: 0;
 
     color: white;
@@ -105,7 +104,7 @@ main .container-centered .card .liked {
     background-color: white;
 
     position: absolute;
-    top: 10px;
+    top: 5%;
     right: 0;
 
     font-size: 2em;
