--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .container-centered {
-    max-width: 1000px;
+    max-width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -70,6 +70,9 @@ main .container-centered {
 /* card picture */
 main .container-centered .card {
     width: 30%;
+}
+
+main .container-centered .card .card-img-wrapper {
     position: relative;
 }
 
