--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ main .container-centered .card {
 }
 
 main .container-centered .card .card-img-wrapper {
+    min-width: 200px;
     position: relative;
 }
 
